<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whoops"
        android:layout_above="@id/image"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:fontFamily="monospace"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ghostbusters_b_w"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/network_image_description"
                 />
    <TextView
        android:id="@+id/instructions"
        android:layout_below="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_text"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:fontFamily="monospace"/>

    <ImageView
        android:id="@+id/refresh"
        android:layout_width="38dp"
        android:layout_height="42dp"
        android:layout_below="@+id/instructions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@android:color/black"
        android:src="@android:drawable/stat_notify_sync" />

</RelativeLayout>