<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/pb1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/movie_poster_details"
                android:layout_width="match_parent"
                android:layout_height="239dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/description"
                android:scaleType="fitXY"

                />

            <TextView
                android:id="@+id/movie_title_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="16dp"
                android:background="#c0000000"
                android:fontFamily="sans-serif-smallcaps"
                android:maxLines="2"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Deadpool" />

            <TextView
                android:id="@+id/movie_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="220dp"
                android:layout_marginEnd="16dp"
                android:background="#c0000000"
                android:fontFamily="sans-serif-smallcaps"
                android:maxLines="1"
                android:text="@string/movie_genre"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/details_back_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                >


            </android.support.v7.widget.Toolbar>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/movie_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/rating_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/movie_rating_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_toRightOf="@id/rating_title"
                android:paddingLeft="5dp"
                android:textSize="16sp"
                tools:text="7.7" />

            <TextView
                android:id="@+id/release_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/movie_rating_details"
                android:paddingLeft="5dp"
                android:text="@string/release"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/movie_date_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/release_title"
                android:paddingLeft="5dp"
                android:textSize="16sp"
                tools:text="Mar 6, 2010" />

            <ToggleButton
                android:id="@+id/button_favorite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_favorite"
                android:checked="false"
                android:saveEnabled="false"
                android:text=""
                android:textAlignment="viewStart"
                android:textOff=""
                android:textOn="" />

        </RelativeLayout>

        <TextView
            android:id="@+id/overview_title"
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/overview_details"
            style="@style/ContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Deadpool lorem ipsum" />


        <TextView
            android:id="@+id/director_title"
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/director_details"
            style="@style/ContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Stan Lee" />


        <TextView
            android:id="@+id/cast_title"
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/cast_details"
            style="@style/ContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="some names, other names" />

        <TextView
            android:id="@+id/similar_movies"
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/similar_movies"
            android:textAllCaps="true" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/similar_movie_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:elevation="4dp">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/reviews"
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/review_author"
            style="@style/ContentStyleLightGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Author Name" />

        <TextView
            android:id="@+id/review_details"
            style="@style/ContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="comment here" />

        <TextView
            android:id="@+id/review_author2"
            style="@style/ContentStyleLightGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Author Name" />

        <TextView
            android:id="@+id/review_details2"
            style="@style/ContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="comment here" />

    </LinearLayout>
</ScrollView>